# drf-project-template

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.dev  Makefile  README.MD  docker-compose.local.yml  docker-compose.yml  init.sh  pyproject.toml
config/: schema.py  secrets-map.yaml
nginx/: .env.example  Dockerfile  README.MD  before_deploy.sh  default.conf.template  docker-compose.yml  entrypoint.sh
src/apps/get_healthz/api/: serializers.py  views.py
src/apps/healthz/: __init__.py  apps.py  services.py  tasks.py  urls.py
src/apps/healthz/api/: __init__.py  views.py
src/core/: celery.py  models.py  services.py  settings.py  urls.py  viewsets.py
src/core/conf/: __init__.py  api.py  boilerplate.py  cache.py  db.py  environ.py  logger.py  static.py  swagger.py
src/core/conf/integrations/: __init__.py  example.py
